added more images and lab page

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
              <li><a href="writing.html">Writing</a></li>
              <li>Speaking</li>
              <li>Extra Work</li>
-             <li>Lab Activities</li>
+             <li><a href="labAct.html">Lab Activities</a></li>
              
            </ul>
          </div>
