--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
         <div id="header" class="wrappersSon">
          <div id="menu">
            <ul>
-              <li>Home</li>
+              <li><a href="index.html">Home</a></li>
              <li><a href="writing.html">Writing</a></li>
-             <li>Speaking</li>
+             <li><a href="speaking.html">Speaking</a></li>
              <li>Extra Work</li>
              <li><a href="labAct.html">Lab Activities</a></li>
              
