--- a/writing.html
+++ b/writing.html
@@ -11,10 +11,10 @@
          <div id="menu">
            <ul>
             <li><a href="index.html">Home</a></li>
-             <li>Writing</li>
-             <li>Speaking</li>
-             <li>Extra Work</li>
-             <li><a href="labAct.html">Lab Activities</a></li>
+            <li><a href="writing.html">Writing</a></li>
+            <li><a href="speaking.html">Speaking</a></li>
+            <li>Extra Work</li>
+            <li><a href="labAct.html">Lab Activities</a></li>
            </ul>
          </div>
         </div>
